manifests/envoy-gateway/overlay/private/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-wildcard-lan-stamx-nl
            kind: Secret
  addresses:
    - type: IPAddress
      value: 10.33.33.100
